tests/error/erro06.lua



function foo()
    local x = 1
    if x == 1 then
        goto label
    end
    ::labe::
end

foo()